Use a different layout for root domain, subdomain and chat room. Minor styling to prevent eye bleeding.

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -8,37 +8,6 @@
 
 
 
-/* 
- * The styles contained here are meant to provide for an attractive experience out of the box
- * and are meant to be removed once custom visual design begins. */
-
-/* 
- * To install the fancy type plugin: */
-/* Indentation instead of line shifts for sibling paragraphs. Mixin to a style like p + p */
-/* 
- * For great looking type, use this code instead of asdf:
- * <span class="alt">asdf</span>
- * Best used on prepositions and ampersands. */
-/* 
- * For great looking quote marks in titles, replace "asdf" with:
- * <span class="dquo">&#8220;</span>asdf&#8221;
- * (That is, when the title starts with a quote mark).
- * (You may have to change this value depending on your font size). */
-/* 
- * Reduced size type with incremental leading
- * (http://www.markboulton.co.uk/journal/comments/incremental_leading/)
- * This could be used for side notes. For smaller type, you don't necessarily want to
- * follow the 1.5x vertical rhythm -- the line-height is too much.
- * Using this class, it reduces your font size and line-height so that for
- * every four lines of normal sized type, there is five lines of the sidenote. eg:
- * New type size in em's:
- * New line-height value: */
-/* 
- * Surround uppercase words and abbreviations with this class.
- * Based on work by Jørgen Arnor Gårdsø Lom [http://twistedintellect.com/] */ */
-
-
-
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p,
 pre, a, abbr, acronym, address, code, del, dfn, em, img,
 dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption, tbody, tfoot, thead, tr {
@@ -732,8 +701,40 @@ body {
       margin-right: -960px;
       margin-bottom: 1.5em;
       margin-left: 960px; }
-  body textarea {
-    font: inherit; }
+
+textarea {
+  font: inherit; }
+
+#header {
+  background-color: #222;
+  padding: 10px; }
+  #header .inner {
+    color: #fff;
+    width: 950px;
+    margin: 0 auto;
+    overflow: auto;
+    overflow: -moz-scrollbars-none;
+    display: inline-block; }
+    #header .inner {
+      display: block; }
+    #header .inner h1 {
+      color: #FFFF66; }
+  #header a {
+    color: #eee;
+    margin-right: 10px; }
+    #header a:hover {
+      color: #fff; }
+
+#content {
+  padding-top: 16px; }
+  #content .inner {
+    width: 950px;
+    margin: 0 auto;
+    overflow: auto;
+    overflow: -moz-scrollbars-none;
+    display: inline-block; }
+    #content .inner {
+      display: block; }
 
 #room #log {
   margin-right: 216px;
@@ -749,8 +750,6 @@ body {
   #room #log .notice {
     font-size: 10px;
     background-color: #ddf; }
-#room #canvas {
-  border: 1px solid #ccc; }
 #room #sidebar {
   position: fixed;
   right: 0;
